# fast_zero

./: .env.example  .gitignore  README.md  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 68c123cc11b0_create_updated_at_field_on_users_table.py  953b4c2388d1_create_users_table.py  cc965f133b7d_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
